@@ -67,5 +67,6 @@
 
 #include <Rcpp/sugar/sugar.h>
 #include <Rcpp/stats/stats.h>
+#include <Rcpp/sugar/sugar_impl.h>
 
 #endif
